--- a/resources/frontend/templates/header.html
+++ b/resources/frontend/templates/header.html
@@ -36,7 +36,7 @@
 		<div class="header">
 			<div class="row">
 				<div class="col-xs-12">
-					<span class="pull-right top-crumb"><a href="search-nauth.html">Войти</a></span>
+					<span class="pull-right top-crumb"><a href="/signup">Войти</a></span>
 					<span class="pull-right top-crumb">Звоните нам (888) 283-5051</span>
 				</div>
 			</div>
