--- a/resources/frontend/static/css/main.css
+++ b/resources/frontend/static/css/main.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
 	font-size: 13px;	
 	color: #333333;
@@ -9,6 +13,22 @@ body {
 	  width: 970px;
 	  max-width: none !important;
 	}
+}
+
+.container {
+	min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -100px;
+}
+
+.footer {
+	background-color: #919191;
+	height: 100px;
+}
+
+.footer .cc {
+	color: #c3c3c3;
 }
 
 .pagination>li>a, .pagination>li>span {
@@ -90,6 +110,10 @@ body {
 
 .header .search {
 	margin-top: 22px;
+}
+
+.content {
+	margin-bottom: 115px;
 }
 
 .sidebar {
@@ -252,13 +276,14 @@ body {
 	margin-top: 20px;	
 }
 
-.footer {
-	background-color: #919191;
-	min-height: 100px;
-	padding-top: 40px;
-	margin: 20px 10px 0 10px;
+.signup {
+	margin-top: 150px;
 }
 
-.footer .cc {
-	color: #c3c3c3;
+.signup form {
+	text-align: center;
+}
+
+.signup form input[type=email] {
+	width: 500px;
 }
