--- a/resources/frontend/static/css/main.css
+++ b/resources/frontend/static/css/main.css
@@ -29,6 +29,7 @@ body {
 
 .footer .cc {
 	color: #c3c3c3;
+	margin-top: 50px;
 }
 
 .pagination>li>a, .pagination>li>span {
@@ -337,8 +338,17 @@ body {
 }
 
 .order-book .title {
-	vertical-align: middle;
 	font-size: 110%;
+}
+
+.order-book .status {
+	white-space: nowrap;
+	font-weight: bold;
+	text-align: center
+}
+
+.order-book td {
+	vertical-align: middle !important;
 }
 
 .order-shiping {
