--- a/resources/frontend/templates/header.html
+++ b/resources/frontend/templates/header.html
@@ -44,9 +44,14 @@
 					{% end %}
 					<span class="pull-right top-crumb">Звоните нам (888) 283-5051</span>
 					{% if .user %}
-						<span class="pull-right top-crumb"><a href="/user/me">
-							<b>Привет, {% if .user.Name %}{% .user.Name %}{% else %}Юзернейм{% end %}!</b>
-						</a></span>
+						<span class="pull-right top-crumb dropdown" dropdown>
+							<a href class="dropdown-toggle" dropdown-toggle><b>Привет, {% if .user.Name %}{% .user.Name %}{% else %}Юзернейм{% end %}!</b></a>
+							<ul class="dropdown-menu">
+					        <li>
+					        	<a href="/user/me/history">История заказов</a>
+					        </li>
+					      </ul>
+						</span>
 					{% end %}
 				</div>
 			</div>
