--- a/resources/frontend/templates/header.html
+++ b/resources/frontend/templates/header.html
@@ -17,13 +17,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-resource.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap.min.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 	<script src="/static/js/angular/slick.min.js"></script>
 
 	<script src="/static/js/app/app.js"></script>
+	<script src="/static/js/app/service/address.js"></script>
 	<script src="/static/js/app/controller/signup.js"></script>
+	<script src="/static/js/app/controller/order.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
