Изменения в шаблонах фронтенда

--- a/resources/frontend/templates/book/book.html
+++ b/resources/frontend/templates/book/book.html
@@ -50,8 +50,7 @@
 								<li>Стоимость базовой подписки: 490 рублей за 30 календарных дней</li>
 								<li>2 недели на возврат книги после окончания срока подписки</li>
 								<li>Сдайте и возьмите новую книгу в любой момент</li>
-								<li>Если Вам понравилась книга, просто оставьте ее себе (подписка аннулируется)</li>
-								<li><a href="/howitworks">Подронее</a></li>
+								<li><a href="/about">Подробнее</a></li>
 							</ul>
 						</div>
 						<!-- <div class="separator">- или -</div>
