--- a/resources/frontend/templates/header.html
+++ b/resources/frontend/templates/header.html
@@ -9,17 +9,22 @@
 	
 	<title></title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.13/toaster.min.css"/>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/>
+	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-resource.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.13/toaster.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap.min.js"></script>
 
+	
 	<script src="https://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 	<script src="/static/js/angular/slick.min.js"></script>
 
@@ -27,6 +32,7 @@
 	<script src="/static/js/app/service/address.js"></script>
 	<script src="/static/js/app/controller/signup.js"></script>
 	<script src="/static/js/app/controller/order.js"></script>
+	<script src="/static/js/app/controller/history.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,11 +48,10 @@
 				<div class="col-xs-12">
 					{% if not .user %}
 						<span class="pull-right top-crumb"><a href="/signup?from={% .location %}">Войти</a></span>
-					{% else %}
-						<span class="pull-right top-crumb"><a href="/signout?from={% .location %}">Выход</a></span>
 					{% end %}
 					<span class="pull-right top-crumb">Звоните нам (925) 849-5222</span>
 					{% if .user %}
+						<span class="pull-right top-crumb"><a href="/signout?from={% .location %}">Выход</a></span>
 						<span class="pull-right top-crumb dropdown" dropdown>
 							<a href class="dropdown-toggle" dropdown-toggle><b>Привет, {% if .user.Name %}{% .user.Name %}{% else %}Юзернейм{% end %}!</b></a>
 							<ul class="dropdown-menu">
