--- a/resources/frontend/templates/order/order.html
+++ b/resources/frontend/templates/order/order.html
@@ -28,23 +28,30 @@
 					{% end %}
 				]"></span>
 				<input type="hidden" name="book" value="{% $.form.Book %}" />
-				<div class="row order-book">
-					<div class="col-xs-12">
-						<h4>Выбранная книга</h4>
-						<table cla
-						ss="table">
-							<tr>
-								<td><img src="/upload/cover/preview/{% $.book.Id %}.jpg" class="cover"></td>
-								<td class="title">
-									<a href="#">{% $.book.Title %}</a>
-								</td>
-							</tr>
-						</table>
+				<div class="row panel panel-default order-book">
+					<div class="panel-heading"><strong>Выбранная книга</strong></div>
+					<div class="panel-body">
+						<div class="cover pull-left">
+							<img src="/upload/cover/preview/{% $.book.Id %}.jpg" class="cover">
+						</div>
+						<div class="meta">
+							<div class="title"><a href="/book/{% $.book.Id %}?c={% $.category %}">{% $.book.Title %}</a></div>
+							<div>Автор{% if gt (len $.book.AuthorsId) 1 %}ы{% end %}: 
+								{% range $index, $authorId := $.book.AuthorsId %}
+									{% if gt (len $.book.AuthorsId) 1 %}
+										{% if eq (len $.book.AuthorsId) (add $index 1) %} и {% else if $index %}, {% end %}
+									{% end %}
+									<a href="/search?a={% $authorId %}"><b>{% (index $.authors $authorId).Name %}</b></a>
+								{% end %}
+							</div>
+							<div>Издательство: <a href="/search?p={% $.book.PublisherId %}"><b>{% (index $.publishers $.book.PublisherId).Name %}</b></a></div>
+							<div>Дата выхода: {% $.book.Release.Format "1.2.2006" %}</div>
+						</div>
 					</div>
 				</div>
-				<div class="row order-shiping">
-					<div class="col-xs-12">
-						<h4>Контакты и доставка</h4>
+				<div class="row panel panel-default order-shiping">
+					<div class="panel-heading"><strong>Контакты и доставка</strong></div>
+					<div class="panel-body">
 						<fieldset class="form-horizontal">
 							<div class="form-group">
 							<label class="col-sm-1 control-label">Имя:</label>
@@ -67,6 +74,7 @@
 									<input type="radio" name="address" ng-value="address.id" ng-model="form.address">{{ address.address }}<i ng-if="address.comment">, {{ address.comment }}</i>
 								</label>
 							</li>
+							<li class="text-danger" ng-init="form.error.address = '{% $.form.Error "Address" %}'">{{ form.error.address }}</li>
 							<li><a href="#" ng-click="addAddressFlag=true" ng-hide="addAddressFlag || !addresses.length">Добавить новый адрес доставки</a></li>
 						</ul>
 						<fieldset class="col-sm-5" ng-show="addAddressFlag || !addresses.length">
@@ -82,9 +90,9 @@
 						</fieldset>
 					</div>
 				</div>
-				<div class="row order-subscription">
-					<div class="col-xs-12">
-						<h4>Информация о подписке</h4>
+				<div class="row panel panel-default order-subscription">
+					<div class="panel-heading"><strong>Информация о подписке</strong></div>
+					<div class="panel-body">
 						{% if $.subscription.Id %}
 							<p>{% $.subscription.Name %}. Действительна до {% $.subscription.Expiration.Format "01.02.2006" %}</p>	
 						{% else %}
