--- a/resources/frontend/templates/header.html
+++ b/resources/frontend/templates/header.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8"> 
 	
-	<title></title>
+	<title>{% if $.title %}{% $.title %}{% else %}OpenBook - аренда профессиональной литературы{% end %}</title>
 
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
