Новые фичи; рефакторинг; исправление багов
* New В историю заказов добавлена возможность фильтровать заказы по статусу
* New Добавлена отдельная страница заказа, доступная по прямой ссылке
* New Добавлена возможность вернуть заказ, находящийся на руках, с соответствующей кнопкой
* New В выпадающее меню добавлена инфомрация о кол-ве книг на руках с возможностью их посмотреть в истории
* New В выпадающее меню добавлена информация о подписке с возможностью продлить

* Fix Продление подписки при наличии действующей подписки
* Fix Ошибка в форме заказа

--- a/resources/frontend/static/css/main.css
+++ b/resources/frontend/static/css/main.css
@@ -15,6 +15,16 @@ body {
 	}
 }
 
+.dropdown-menu > li > span {
+	display: block;
+	padding: 3px 20px;
+	clear: both;
+	font-weight: 400;
+	line-height: 1.42857143;
+	color: #333;
+	white-space: nowrap;
+}
+
 .panel-default {
 	border: none !important;
 }
@@ -321,6 +331,10 @@ body {
 
 .signup .text-danger {
 	margin: 5px 0 0 0;
+}
+
+.history .buttons {
+	margin: 30px 10px 0 0;
 }
 
 .order h4 {
