--- a/resources/frontend/templates/footer.html
+++ b/resources/frontend/templates/footer.html
@@ -18,6 +18,7 @@
 		ga('create', 'UA-62617831-1', 'auto');
 		ga('send', 'pageview');
 	</script>
+	<toaster-container></toaster-container>
 </body>
 </html>
 {% end %}
